--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
             console.log('token google: ' + id_token);
 
             var xhr = new XMLHttpRequest();
-            xhr.open('POST', 'http://localhost:3000/authentication');
+            xhr.open('POST', '/authentication');
             xhr.setRequestHeader('Content-Type', 'application/x-www-form-urlencoded');
             xhr.onload = function() {
                 console.log('Signed in as: ' + xhr.responseText);
